added contents of  repo to gitignore, removed post download PROVIDE

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
-Hw1/PeerTestRepositories/dat_files/a.dat
-Hw1/PeerTestRepositories/dat_files/b.dat
-Hw1/PeerTestRepositories/dat_files/c.dat
-Hw1/PeerTestRepositories/dat_files/d.dat
-Hw1/PeerTestRepositories/dat_files/e.dat
-Hw1/PeerTestRepositories/dat_files/f.dat
-Hw1/PeerTestRepositories/dat_files/g.dat
-Hw1/PeerTestRepositories/dat_files/h.dat
+Hw1/PeerTestRepositories/dat_files/*.dat
+
+Hw1/PeerTestRepositories/peer1-repo/*.dat
+Hw1/PeerTestRepositories/peer2-repo/*.dat
+Hw1/PeerTestRepositories/peer3-repo/*.dat
